# paper-cli

./: Cargo.toml  README.md
src/: .command_parser.rs.swp  .main.rs.swp  command.rs  command_error.rs  command_parser.rs  line_reader.rs  main.rs  policy.rs  response_sheet.rs  tcp_client.rs
src/command/: cli.rs  client.rs  error.rs  parser.rs
src/line_reader/: error.rs  hinter.rs  history.rs  line.rs
