[package]
name = "paper_cli"
version = "1.9.2"
edition = "2021"

[dependencies]
regex = "1.11.1"
fasthash = "0.4.0"
clap = { version = "4.5.36", features = ["derive"] }
paper_utils = { git = "ssh://git@github.com/Paper-Book/paper-utils.git", tag = "v1.2.3" }
paper_client = { git = "ssh://git@github.com/Paper-Book/paper-client-rs.git", tag = "v1.9.2" }
byteorder = "1.5.0"
kwik = { git = "https://github.com/KiaShakiba/kwik.git", tag = "v1.16.0" }
crossterm = "0.29.0"
parse-size = "1.1.0"
thiserror = "2.0.12"

[[bin]]
name = "paper-cli"
path = "src/main.rs"
