[package]
name = "paper-cli"
version = "1.10.1"
edition = "2021"
license = "AGPL-3.0"
description = "A CLI tool for interacting with PaperCache."
repository = "https://github.com/PaperCache/paper-cli.git"
readme = "README.md"
homepage = "https://papercache.io"
keywords = ["caching", "PaperCache"]
categories = ["caching"]

[dependencies]
regex = "1.11.1"
fasthash = "0.4.0"
clap = { version = "4.5.40", features = ["derive"] }
paper-utils = "1.2.5"
paper-client = "1.10.1"
byteorder = "1.5.0"
kwik = "1.18.6"
crossterm = "0.29.0"
parse-size = "1.1.0"
thiserror = "2.0.12"
