[package]
name = "paper-cli"
version = "1.10.3"
edition = "2024"
license = "AGPL-3.0"
description = "A CLI tool for interacting with PaperCache."
repository = "https://github.com/PaperCache/paper-cli.git"
readme = "README.md"
homepage = "https://papercache.io"
keywords = ["caching", "PaperCache"]
categories = ["caching"]

[dependencies]
regex = "1.11.2"
fasthash = "0.4.0"
clap = { version = "4.5.47", features = ["derive"] }
paper-utils = "1.2.6"
paper-client = "1.10.2"
byteorder = "1.5.0"
kwik = "1.18.7"
crossterm = "0.29.0"
parse-size = "1.1.0"
thiserror = "2.0.16"
